# untestables-delete

./: .dockerignore  .env-template  .gitignore  .teamcity.yml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  tests.Dockerfile
.github/workflows/: tests.yml
.teamcity/: README.md  pipelines.yml  settings.kts
common/: logging.py
docs/: ci_cd.md  tasks.md
migrations/: env.py
migrations/versions/: 0223a33bad8e_create_repositories_table.py  1982ee72d7c9_add_missing_test_columns.py  3b7f33484c7e_add_timestamps_to_repositories.py  41c40b3d0d6e_add_is_active_column.py  5dd3a955a9a4_add_pr_tracking_columns.py  75f1341b6ce2_add_is_blocked_by_claude.py  add_language_column.py  add_last_scanned_at_column.py  cba608fbd101_add_scan_tasks_table.py  cf74106402b5_add_index_to_repository_star_count.py  e4ecc4a181c8_add_is_malicious_column_to_repositories_.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_github_client.py
untestables/: analyzer.py  cli.py  config.py
untestables/api/: README.md  __init__.py  main.py  task_executor.py
untestables/github/: client.py  models.py
untestables/models/: scan_task.py
