[tool.poetry]
name = "untestables"
version = "0.1.0"
description = "A tool to find repositories that need unit tests"
authors = ["llbbl <logan@llbbl.com>"]
readme = "README.md"

packages = [
    { include = "untestables" }
]

[tool.poetry.dependencies]
python = "^3.11"
PyGithub = "^2.1.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
psycopg2-binary = "^2.9.10"
click = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
test = "pytest:main"
untestables = "untestables.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=untestables --cov-report=term-missing"
